# shop-stpre

./: .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  start-backend.bat  start-frontend.bat  tailwind.config.js  vite.config.js
backend/: .gitignore  init_db.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: __init__.py  address.py  auth.py  cart.py  category.py  coupon.py  favorite.py  order.py  product.py  review.py  user.py
src/: App.vue  style.css
src/api/: address.js  auth.js  cart.js  coupon.js  favorite.js  order.js  product.js  request.js  review.js
src/components/: PayModal.vue
src/data/: books.js
src/router/: index.js
src/stores/: address.js  cart.js  coupon.js  favorites.js  order.js  reviews.js  user.js
src/views/: AboutUs.vue  AddAddress.vue  AddressManage.vue  BookDetail.vue  Cart.vue  Category.vue  Checkout.vue  ClearData.vue  Coupons.vue  CustomerService.vue  Home.vue  Login.vue  OrderDetail.vue  OrderSuccess.vue  Profile.vue  Search.vue  SelectAddress.vue  SelectCoupon.vue
